--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@emotion/react": "11.9.3",
+    "@emotion/styled": "11.9.3",
     "node-sass": "5.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-scripts": "4.0.0",
+    "styled-components": "5.3.5",
     "styled-jsx": "5.0.2"
   },
   "devDependencies": {
